syntax = "proto3";

option go_package = "kloudlite.io/rpc/auth";

service Auth {
  rpc GetAccessToken(GetAccessTokenRequest) returns (AccessTokenOut);
}

message GetAccessTokenRequest {
  string userId = 1;
  string provider = 2;
}

message AccessTokenOut {
  string userId  = 1;
  string email  = 2;
  string provider  = 3;
  OauthToken oauthToken = 4;
}

message OauthToken {
  string access_token=1;
  string token_type=2;
  string refresh_token=3;
  int64 expiry=4;
  string raw=5;
}

